cmake_minimum_required(VERSION 3.17)
project(sort)

set(CMAKE_CXX_STANDARD 14)

add_executable(HalfInsertSort HalfInsertSort.cpp)
add_executable(stl stl.cpp)
add_executable(ShellSort ShellSort.cpp)
add_executable(BubbleSort BubbleSort.cpp)
add_executable(QuickSort QuickSort.cpp)
add_executable(SimpleSelectSort SimpleSelectSort.cpp)
add_executable(HeapSort HeapSort.cpp)
add_executable(MergeSort MergeSort.cpp)
add_executable(Test Test.cpp)
add_executable(lcTest lcTest.cpp)
add_executable(2015-3 2015-3-优先队列.cpp)
add_executable(2016-2 2016-2-后缀序列.cpp)
add_executable(2016-3 2016-3-哈夫曼编码.cpp)
add_executable(2017-2 2017-2-求解校验码.cpp)
add_executable(2018-1 2018-1-相隔天数.cpp)
add_executable(2018-2 2018-2-最大连续子序列.cpp)
add_executable(2020-2 2020-2-斗牛.cpp)
add_executable(2020-3 2020-3-打地鼠.cpp)
add_executable(2020-4 2020-4-序列.cpp)
add_executable(2020-5 2020-5-二叉搜索树.cpp)
add_executable(2021-1 2021-1-二叉树.cpp)
add_executable(io 文件读取.cpp)
add_executable(2018-5 2018-5-一元一次方程.cpp)
add_executable(2011-1 2011-1-最长公共子序列LCS.cpp)
add_executable(2011-2 2011-2-中序与后序求层次遍历.cpp)
add_executable(2012-1 2012-1-1000名求前30.cpp)
add_executable(2012-2 2012-2-二叉树最大叶子间距.cpp)
add_executable(2012-3 2012-3-字符串的重复输出.cpp)
add_executable(2013-1 2013-1-字符串匹配.cpp)
add_executable(2013-2 2013-2-AFamousICPCTeam.cpp)
add_executable(2013-3 2013-3-AFamousGrid.cpp)
add_executable(2014-1 2014-1-二分查找次数.cpp)
add_executable(2014-3 2014-3-二叉树前中后序遍历.cpp)
add_executable(2014-4 2014-4-Hanoi塔.cpp)
